@@ -87,6 +87,7 @@
 #define ERR_EXEC_FAILED		11	/* exec failed for some reason */
 #define ERR_CANCELED		12	/* user cancelled operation */
 #define ERR_PAM_INT_ERROR	13	/* PAM internal error */
+#define ERR_MAX_TRIES		14	/* No more retries allowed */
 #define ERR_UNK_ERROR		255	/* unknown error */
 
 /* Paths, flag names, and other stuff. */
